improvement: update primary color

--- a/src/app.postcss
+++ b/src/app.postcss
@@ -5,7 +5,7 @@
   width: 0.5rem;
 }
 *::-webkit-scrollbar-thumb {
-  background-color: #3b82f6;
+  background-color: #0b5ce0;
   border-radius: 0.5rem;
 }
 *::-webkit-scrollbar-corner {
