--- a/src/app.pcss
+++ b/src/app.pcss
@@ -7,7 +7,7 @@
 	@apply h-2 w-2;
 }
 *::-webkit-scrollbar-thumb {
-	@apply rounded-full bg-violet-500;
+	@apply bg-primary-500 rounded-full;
 }
 ::-webkit-scrollbar-corner {
 	@apply bg-transparent;
