--- a/src/app.css
+++ b/src/app.css
@@ -1,3 +1,16 @@
 @import 'tailwindcss/base';
 @import 'tailwindcss/components';
 @import 'tailwindcss/utilities';
+
+::-webkit-calendar-picker-indicator {
+	@apply dark:invert;
+}
+*::-webkit-scrollbar {
+	@apply h-2 w-2;
+}
+*::-webkit-scrollbar-thumb {
+	@apply bg-primary-500 rounded-full;
+}
+::-webkit-scrollbar-corner {
+	@apply bg-transparent;
+}
