--- a/src/app.css
+++ b/src/app.css
@@ -9,7 +9,7 @@
 	@apply h-2 w-2;
 }
 *::-webkit-scrollbar-thumb {
-	@apply bg-primary-500 rounded-full;
+	@apply rounded-full bg-primary-500;
 }
 ::-webkit-scrollbar-corner {
 	@apply bg-transparent;
